--- a/env.example
+++ b/env.example
@@ -22,6 +22,13 @@ BRIDGE_TEMPLATE_LANG=en
 # SMS Portal Configuration
 SMSPORTAL_HMAC_SECRET=your_hmac_secret_here
 
+# Webhook Authentication
+WEBHOOK_AUTH_TOKEN=your_webhook_auth_token_here
+
+# Admin & AI Assistant Access
+ADMIN_TOKEN=your_admin_token_here
+AI_ASSISTANT_TOKEN=your_ai_assistant_token_here
+
 # Application Configuration
 ENV=dev
 PORT=8080
